--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,4 +63,4 @@ jobs:
         DEFAULT_BRANCH: devel
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VALIDATE_TERRAFORM: true
-        VALIDATE_TERRAFORM_TERRASCAN: true
+        VALIDATE_TERRAFORM_TERRASCAN: false
