--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -63,3 +63,14 @@ jobs:
         DEFAULT_BRANCH: devel
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VALIDATE_TERRAFORM: true
+
+    # Test with localstack
+    - name: LocalStack Test
+      env:
+        DEFAULT_REGION: us-east-1
+        AWS_ACCOUNT_ID: "000000000000"
+        AWS_ACCESS_KEY_ID: dummy-access-key
+        AWS_SECRET_ACCESS_KEY: dummy-secret-key
+      run: |
+        docker-compose -f docker-compose.yaml up -d
+        terraform apply -auto-approve
