add AWS Secrets

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,9 +69,9 @@ jobs:
       id: localstack
       env:
         DEFAULT_REGION: us-east-1
-        AWS_ACCOUNT_ID: "000000000000"
-        AWS_ACCESS_KEY_ID: dummy-access-key
-        AWS_SECRET_ACCESS_KEY: dummy-secret-key
+        AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         docker-compose -f docker-compose.yaml up -d
         terraform apply -auto-approve
