--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-max_line_length = 240
+max_line_length = false
 indent_style = space
 indent_size = 2
 
@@ -19,11 +19,11 @@ indent_style = space
 indent_size = 2
 
 [*.md]
-max_line_length = 240
+max_line_length = false
 
 [Makefile]
 tab_width = 2
 indent_style = tab
 
 [COMMIT_EDITMSG]
-max_line_length = 240
+max_line_length = false
