--- a/.github/workflows/terraform-release.yml
+++ b/.github/workflows/terraform-release.yml
@@ -1,3 +1,4 @@
+---
 on:
   push:
     # Sequence of patterns matched against refs/tags
@@ -12,44 +13,44 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Get current tag
-      id: currenttag
-      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      - name: Get current tag
+        id: currenttag
+        run: echo ::set-output name=tag::"${GITHUB_REF#refs/*/}"
 
-    - name: Create Release
-      id: create_release
-      uses: ncipollo/release-action@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ steps.currenttag.outputs.tag }}
-        name: Release ${{ steps.currenttag.outputs.tag }}
-        body: |
-          # Terraform - AWS with Localstack
+      - name: Create Release
+        id: create_release
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.currenttag.outputs.tag }}
+          name: Release ${{ steps.currenttag.outputs.tag }}
+          body: |
+            # Terraform - AWS with Localstack
 
-          [![Terraform](https://github.com/imjoseangel/terraform-aws/actions/workflows/terraform.yml/badge.svg)](https://github.com/imjoseangel/terraform-aws/actions/workflows/terraform.yml)
+            [![Terraform](https://github.com/imjoseangel/terraform-aws/actions/workflows/terraform.yml/badge.svg)](https://github.com/imjoseangel/terraform-aws/actions/workflows/terraform.yml)
 
-          A [Terraform][2] solution to test AWS with LocalStack.
+            A [Terraform][2] solution to test AWS with LocalStack.
 
-          By [imjoseangel][3]
+            By [imjoseangel][3]
 
-          Use with:
-          ```bash
-          export AWS_ACCESS_KEY_ID=test
-          export AWS_SECRET_ACCESS_KEY=test
+            Use with:
+            ```bash
+            export AWS_ACCESS_KEY_ID=test
+            export AWS_SECRET_ACCESS_KEY=test
 
-          terraform init
-          terraform apply
-          ```
+            terraform init
+            terraform apply
+            ```
 
-          ## License
+            ## License
 
-          Licensed under [the MIT License][1].
+            Licensed under [the MIT License][1].
 
-          [1]: https://github.com/imjoseangel/terraform-aws/blob/devel/LICENSE
-          [2]: https://www.terraform.io/
-          [3]: https://imjoseangel.github.io
-        draft: false
-        prerelease: false
+            [1]: https://github.com/imjoseangel/terraform-aws/blob/devel/LICENSE
+            [2]: https://www.terraform.io/
+            [3]: https://imjoseangel.github.io
+          draft: false
+          prerelease: false
