--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,6 +42,12 @@ jobs:
         id: validate
         run: terraform validate
 
+      # Static code analyzer for Terraform
+      - name: Run TFSec
+        uses: aquasecurity/tfsec-pr-commenter-action@v1.1.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
       # Run the tfsec sarif check. Uses static analysis of your terraform templates to spot potential security issues.
       - name: Terraform Security Analysis
         id: tfsec
@@ -56,25 +62,13 @@ jobs:
         with:
           sarif_file: tfsec.sarif
 
-      # CStatic code analyzer for Infrastructure as Code with terrascan.
-      - name: Terraform Scan Code Base
+      # Static code analyzer for Infrastructure as Code
+      - name: Lint Code Base
         id: superlinter
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: devel
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_TERRAFORM: true
+          VALIDATE_TERRAFORM_TERRASCAN: false
           YAML_CONFIG_FILE: .yamllint
-
-      # Test with localstack
-      - name: LocalStack Test
-        id: localstack
-        env:
-          DEFAULT_REGION: us-east-1
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          docker-compose -f docker-compose.yaml up -d
-          terraform apply -auto-approve
